fixing ant-tasks classes' repackaging; wasn't working properly and caused PIT tests failure